# src/routes/request.route.ts
@@ -2,7 +2,7 @@ import { Router } from "express";
 import { createRequest, getRequest } from "../controllers/request/request.controller";
 const router = Router();
 
-router.get('/request', getRequest);
+router.get('/requests', getRequest);
 router.post('/request', createRequest);
 
 export default router;
